Added style.css and updated index.html
added style.css and updated index.html

--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <html>
 	<head>
-		<title>kj wants to play foosball</title>
+		<meta charset="utf-8" />
+		<title>foosball.</title>
 	</head>
 	<body>
-		<p>i want to play foosball!</P>
+		<main>
+			<section>
+				<h2>kj wants to play foosball!</h2>
+				<h2>kj</h2><h1>really</h1> wants to play foosball!</h2>
+				<p></p>
+				<p>someone join him at the table please</P>
+			</section>
+		</main>
 	</body>
 </html>
