--- a/index.html
+++ b/index.html
@@ -2,15 +2,19 @@
 	<head>
 		<link rel="stylesheet" href="style.css"/>
 		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>foosball.</title>
 	</head>
 	<body>
 		<main>
 			<section>
-				<h2>kj wants to play foosball!</h2>
-				<h2>kj</h2><h1>really</h1> wants to play foosball!</h2>
+				<h2>kj</h2><h1>really</h1><h2>wants to play foosball!</h2>
 				<p></p>
 				<p>someone join him at the table please</P>
+			</section>
+			<section>
+					src="https://www.kjwantstoplayfoosball.org/photos/IMG_1853.JPG"
+					alt="game in air. photo was taken with flash"
 			</section>
 		</main>
 	</body>
