fixed formatting of index.html and change something

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 	<body>
 		<main>
 			<section>
-				<h2>kj</h2><h1>really</h1><h2>wants to play foosball!</h2>
-				<p></p>
+				<h3>kj</h3>
+				<h1>really</h1>
+				<h3>wants to play foosball!</h3>
 				<p>someone join him at the table please</P>
 			</section>
 			<section>
