mall updates. actually starting to look like a proper site

--- a/index.html
+++ b/index.html
@@ -2,19 +2,49 @@
 	<head>
 		<link rel="stylesheet" href="style.css"/>
 		<meta charset="utf-8" />
+		<meta name="KEYWORDS" content="foos, foosball, kj, wanting to play foosball, game matcher, kwpf">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>foosball.</title>
 	</head>
 	<body>
 		<main>
-			<section>
-				<h3>kj</h3>
-				<h1>really</h1>
-				<h3>wants to play foosball!</h3>
-				<p>someone join him at the table please</P>
-			</section>
-			<section>
-			</section>
+			<table>
+				<tr>
+				  <th class="header-member">Login: <br>Create an account:</th>
+				  <th>Person 2</th>
+				  <th>Person 1</th>
+				  <th>Person 2</th>
+				  <th>Person 1</th>
+				</tr>
+				<tr>
+				  <td>Emil</td>
+				  <td>Tobias</td>
+				  <td>Linus</td>
+				</tr>
+				<tr>
+				  <td>16</td>
+				  <td>14</td>
+				  <td>10</td>
+				</tr>
+			  </table> 
+
+
+
+
+			<div id="top-border">
+				<section>
+					<h4 class="top-border-h4">kj really wants to play foosball!</h4>
+					<p class="top-border-p"top-boerder->(they made this site to make it easier for them to play)</p>
+				</section>
+				<section>
+				</section>
+			</div>
+			<div id="welcome">
+				<section>
+					<p>Welcome to kj wants to play foosball!</p>
+					<p>We are an organization focused on bringing people together and building friendships through the power of foosball.</p>
+				</section>
+			</div>
 		</main>
 	</body>
 </html>
