--- a/index.html
+++ b/index.html
@@ -10,35 +10,19 @@
 		<main>
 			<table>
 				<tr>
-				  <th class="header-member">Login: <br>Create an account:</th>
-				  <th>Person 2</th>
-				  <th>Person 1</th>
-				  <th>Person 2</th>
-				  <th>Person 1</th>
+					<th class="header-small">
+						<h3>This site has had x visitors!</h3>
+					</th>
+					<th class="header-leaderboard">Person 2</th>
+					<th class="header-about">
+						<h4 class="top-border-h4">kj really wants to play foosball!</h4>
+						<p class="top-border-p"top-boerder->(they made this site to make it easier for them to play)</p>
+					</th>
+					<th class="header-games">Person 2</th>
+					<th class="header-small">Person 1</th>
 				</tr>
-				<tr>
-				  <td>Emil</td>
-				  <td>Tobias</td>
-				  <td>Linus</td>
-				</tr>
-				<tr>
-				  <td>16</td>
-				  <td>14</td>
-				  <td>10</td>
-				</tr>
-			  </table> 
-
-
-
-
-			<div id="top-border">
-				<section>
-					<h4 class="top-border-h4">kj really wants to play foosball!</h4>
-					<p class="top-border-p"top-boerder->(they made this site to make it easier for them to play)</p>
-				</section>
-				<section>
-				</section>
-			</div>
+			</table>
+			<hr>
 			<div id="welcome">
 				<section>
 					<p>Welcome to kj wants to play foosball!</p>
